--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<title> Website	Name </title>
+	</head>
+	<body>
+		<!-- the header includes site navigation -->
+		<header> 
 
+			<nav>
+			</nav>
+
+		</header>
+<!-- the main section include two small sections -->
+		<main>
+			<section>
+				
+			</section>
+<!-- article may not be permanent not sure if I want the landing page to be word free of not -->
+			<article> </article>
+
+		</main>	
+	</body>
+</html>
